# ChangeLog for www-apps/joomla
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 September 2014; Harold Naparst <harold@alum.mit.edu> joomla-3.3.3.ebuild:
  Clean up use flags.

	
  04 September 2014; Harold Naparst <harold@alum.mit.edu> joomla-3.3.3.ebuild:
  Version bump