@@ -1,1 +1,2 @@
 DIST Joomla_3.3.3-Stable-Full_Package.zip 9819965 SHA256 ad3b735ac80adb65413d71399b8309c1f01ef9b2aeadab481305008badd79d1e SHA512 34effe8543c8fde70de95f8e4d6cfc6ed35326a042400bb32d1ea33654b06894510d84648bd9e9a2fb2fdd6e0dfae8772d5a0c52d9424798cd68499a1aeb87b7 WHIRLPOOL 3658bc07a90696ac1e6d96b88151196c5f5ea73cc955503c8e842b07c893aa89a64eb9dc9273ce85f31cddce8096650983831ba74896a0e5dd22754b6d5ef516
+DIST Joomla_3.3.6-Stable-Full_Package.zip 9861884 SHA256 ddf26272f9d64421493ffa93f2343106a98fe5c2b54925d9ec1af81a71f70262 SHA512 2b9a566cc357b617a3860818aab103fd3349dcb64e81d324ff24ba6e913043c4581a1286b9438734b199ea2e8cd17ab86a3f5441ffe5e35600458483d8605044 WHIRLPOOL 0bb8bb506f4ec0aa88563abfa8d5195f436ce287c73abd4babd45f5eb35398ae3521fc50475a51532ea8faa77e938988bd281ffb92449370661c825277c51167
